in these situations.


* Editing Changes in Emacs 25.2


* Changes in Specialized Modes and Packages in Emacs 25.2

** File Notifications

*** The kqueue library is integrated for *BSD and Mac OS X machines.


* New Modes and Packages in Emacs 25.2


* Incompatible Lisp Changes in Emacs 25.2


* Lisp Changes in Emacs 25.2


* Changes in Emacs 25.2 on Non-Free Operating Systems


* Installation Changes in Emacs 25.1

+++
** Building Emacs now requires C99 or later.

+++
** Building Emacs now requires GNU make, version 3.81 or later.

+++
** New configure option --with-cairo.
This builds Emacs with Cairo drawing.  As a side effect, it provides
support for built-in printing, when Emacs was built with GTK+.

** New configure option --with-modules.
This enables support for loading dynamic modules; see below.

---
** By default, Emacs no longer works on IRIX.  We expect that Emacs
users are not affected by this, as SGI stopped supporting IRIX in
December 2013.  If you are affected, please send a bug report.  You
should be able to work around the problem either by porting the Emacs
undumping code to GCC under IRIX, or by configuring --with-wide-int,
or by sticking with Emacs 24.4.

---
** The Emacs garbage collector assumes GC_MARK_STACK == GC_MAKE_GCPROS_NOOPS.
The GC_MAKE_GCPROS_NOOPS stack-marking variant has been the default
since Emacs 24.4, and the other variants were undocumented and were
obstacles to maintenance and development.  GC_MARK_STACK and its
related symbols have been removed from the C internals.

---
** 'configure' now prefers gnustep-config when configuring GNUstep.
If gnustep-config is not available, the old heuristics are used.

---
** 'configure' now prefers inotify to gfile for file notification,
unless gfile is explicitly requested via --with-file-notification='gfile'.

---
** The configure option '--with-pkg-config-prog' has been removed.
Use './configure PKG_CONFIG=/full/name/of/pkg-config' if you need to.

---