@@ -68,6 +68,9 @@ in these situations.
 
 * Lisp Changes in Emacs 25.2
 
+** Autoload files can be generated without timestamps,
+by setting `autoload-timestamps' to nil.
+
 
 * Changes in Emacs 25.2 on Non-Free Operating Systems
 
